--- a/css/styles.css
+++ b/css/styles.css
@@ -314,12 +314,12 @@ footer {
     ╔═════════════════════════════════════════════════════════════════════╗
     ║ ███████████████████████████████████████████████████████████████████ ║
     ║ ████████████████████████ MEDIA QUERY MOBILE ███████████████████████ ║
-    ║ ███████████████████████████████ 480 ███████████████████████████████ ║
+    ║ ███████████████████████████████ 1000 ██████████████████████████████ ║
     ║ ███████████████████████████████████████████████████████████████████ ║
     ╚═════════════════════════════════════════════════════════════════════╝
 */
 
-@media (max-width: 480px) {
+@media (max-width: 1000px) {
     /* Header */
     
     h1 {
@@ -380,7 +380,7 @@ footer {
         flex-grow: 1;
         align-items: stretch;
         justify-content: center;
-        font-size: 10px;
+        font-size: 9px;
         max-width: 22px;
     }
 
@@ -398,7 +398,7 @@ footer {
         flex-direction: column;
         font-family: 'Roboto', sans-serif;
         background-color: black;
-        border-radius: 9px;
+        border-radius: 6px;
         flex-grow: 1;
         align-items: center;
         justify-content: center;
@@ -407,13 +407,13 @@ footer {
     }
 
     .subject_status_img {
-        width: 10px;
+        width: 12px;
     }
 
     .subject_status_01 {
         background-color: rgb(202, 132, 2);
-        font-weight: 400;
-        font-size: 12px;
+        font-weight: 600;
+        font-size: 16px;
         color: black;
     
         -webkit-text-stroke-width: 0.8px;
@@ -421,8 +421,8 @@ footer {
     
     .subject_status_02 {
         background-color: rgb(1 81 5);
-        font-weight: 400;
-        font-size: 12px;
+        font-weight: 600;
+        font-size: 16px;
     }
 
     .subject_new {
@@ -445,14 +445,15 @@ footer {
     .dropdown {
         margin-top: 5px;
         padding: 5px 2px 5px 2px;
-        font-size: 8px;
-        width: 120px;
-        min-width: 120px;
+        font-size: 10px;
+        left: -12px;
+        width: 140px;
+        min-width: 140px;
         border-radius: 5px;
         z-index: 2;
         box-shadow: 0 0 2px 1px rgba(255, 255, 255, 0.397);
     }
-    
+
     .dropdown_2 {
         display: inline;
         flex-direction: column;
@@ -463,7 +464,8 @@ footer {
         padding: 5px 2px 5px 2px;
         background-color: rgb(31, 31, 31);
         color: white;
-        min-width: 160px;
+        left: 10%;
+        min-width: 180px;
         width: 100%;
         border-radius: 5px;
         z-index: 2;
@@ -473,15 +475,15 @@ footer {
     button {
         font-family: 'Dosis', 'sans-serif';
         font-weight: 600;
-        font-size: 4px;
+        font-size: 8px;
         border-radius: 5px;
     }
 
     .condition_buton {
         margin: 2px;
-        border-radius: 25px;
-        width: 40px;
-        height: 15px;
+        border-radius: 20px;
+        width: 65px;
+        height: 18px;
         white-space: nowrap;
     }
 
