--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,7 @@ main {
     position: absolute;
     align-items: center;
     top: 100%;
+    left: -2px;
     margin-top: 5px;
     padding: 5px 2px 5px 2px;
     background-color: rgb(31, 31, 31);
@@ -352,10 +353,10 @@ footer {
 
     .unne_logo {
         position: absolute; 
-        width: 70px; 
+        width: 50px; 
         right: 0; 
-        margin-top: 9vw;
-        margin-right: 12px;
+        margin-top: 40px;
+        margin-right: 8px;
     }
 
     /* Main */
@@ -483,6 +484,7 @@ footer {
         font-weight: 600;
         font-size: 8px;
         border-radius: 5px;
+        border-width: 1px;
     }
 
     .condition_buton {
@@ -505,14 +507,26 @@ footer {
     }
 }
 
-@media (min-width: 650px) {
+@media (min-width: 460px) {
      .unne_logo {
-        position: absolute; 
+        position: absolute;
+        width: 60px;
         right: 0; 
-        margin-top: 2vw;
-        margin-right: 12px;
+        margin-top: 20px;
+        margin-right: 4.5vw;
     }
 }
+
+@media (min-width: 1100px) {
+    .unne_logo {
+        width: 120px;
+        top: 8px; 
+        margin: 15px;
+        right: 2vw;
+    }
+}
+
+
 /* Estilos de los estados de las Materias */
 
 .status_00 {
