--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,10 @@ h2 {
     letter-spacing: 3px;
 }
 
+h3 {
+    padding: 8px 8px;
+}
+
 /* Main */
 
 main {
@@ -64,6 +68,7 @@ main {
     text-align: center;
     flex-direction: row;
     overflow-x: scroll;
+    flex-grow: 1;
 }
 
 .year_column {
