--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ main {
     width: 260px;
     height: 60px;
     border-radius: 16px;
-    border: solid 1px white;
+    border: solid 1px black;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.486);
 }
 
@@ -288,12 +288,25 @@ button {
     border-radius: 5px;
 }
 
-.condition_buton {
+.condition_buton_div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: 2px;
-    border-radius: 25px;
-    width: 124px;
+    border-radius: 5px;
     height: 32px;
     white-space: nowrap;
+}
+
+.condition_buton {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+    margin: 2px;
+    border-radius: 5px;
+    width: 100%;
+    height: 45px;
 }
 
 .condition_button_no {
@@ -538,10 +551,7 @@ progress::-webkit-progress-value {
 
     .condition_buton {
         margin: 2px;
-        border-radius: 20px;
-        width: 65px;
-        height: 18px;
-        white-space: nowrap;
+        height: 23px;
     }
 
     progress {
