--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,21 @@ body {
 
 /* Header */
 
+/* Efecto de Primavera */
+
+.spring-eff {
+    position: absolute;
+    background-image: url("../img/effect-spring.gif");
+    background-repeat: repeat;
+    background-size: 100px;
+    background-position: top;
+    background-repeat: repeat;
+    filter: grayscale(20%);
+    width: 100vw;
+    z-index: -1;
+    height: 120px;
+}
+
 h1 {
     text-align: center;
     padding: 10px;
@@ -377,6 +392,16 @@ progress::-webkit-progress-value {
     color: lightgrey;
 }
 
+/* Efecto de celebración */
+
+.celeb-eff {
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    width: 300px;
+    height: 100px;
+}
+
 /*
     ╔═════════════════════════════════════════════════════════════════════╗
     ║ ███████████████████████████████████████████████████████████████████ ║
@@ -388,6 +413,13 @@ progress::-webkit-progress-value {
 
 @media (max-width: 1000px) {
     /* Header */
+
+    /* Efecto de Primavera */
+
+    .spring-eff {
+        background-size: 80px;
+        height: 90px;
+    }
     
     h1 {
         margin-top: 10px;
@@ -589,6 +621,16 @@ progress::-webkit-progress-value {
     .bar_tittle {
         font-size: 8px;
         margin-left: 5px;
+    }
+
+    /* Efecto de celebración */
+
+    .celeb-eff {
+        position: absolute;
+        top: -10px;
+        left: -10px;
+        width: 140px;
+        height: 50px;
     }
 
     /* Footer */
