--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
     background-position: top;
     background-repeat: repeat;
     filter: grayscale(20%);
-    width: 100vw;
+    width: 100%;
     z-index: -1;
     height: 120px;
 }
@@ -137,6 +137,11 @@ main {
     border-radius: 16px;
     border: solid 1px black;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.486);
+}
+
+.subject_onfocus {
+    border: solid 1px white;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.886);
 }
 
 .subject_container:hover {
