--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,20 @@ html, body {
     height: 120px;
 }
 
+.festival-eff {
+    position: absolute;
+    background-image: url("../img/little_stars_festival.gif");
+    background-repeat: repeat;
+    background-size: 500px;
+    background-position: top;
+    background-repeat: repeat;
+    opacity: 0.4;
+    filter: grayscale(20%);
+    width: 100%;
+    z-index: -1;
+    height: 120px;
+}
+
 h1 {
     text-align: center;
     padding: 10px;
@@ -443,6 +457,11 @@ progress::-webkit-progress-value {
 
     .spring-eff {
         background-size: 80px;
+        height: 90px;
+    }
+
+    .festival-eff {
+        background-size: 400px;
         height: 90px;
     }
     
