--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,19 @@ html, body {
     height: 120px;
 }
 
+.summer-eff {
+    position: absolute;
+    background-image: url("../img/summer.gif");
+    background-size: 90px;
+    background-position: left;
+    background-repeat: no-repeat;
+    opacity: 0.4;
+    filter: grayscale(20%);
+    width: 100%;
+    z-index: -1;
+    height: 120px;
+}
+
 h1 {
     text-align: center;
     padding: 10px;
@@ -465,6 +478,11 @@ progress::-webkit-progress-value {
         height: 90px;
     }
     
+    .summer-eff {
+        background-size: 60px;
+        height: 90px;
+    }
+
     h1 {
         margin-top: 10px;
         text-align: center;
