--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ main::-webkit-scrollbar-corner {
     bottom: -20px;
     right: -20px;
     border: solid 1px rgb(24, 24, 24);
+    box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.486);
 }
 
 .subject_id_01 {
