--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,48 @@ a {
     border-radius: 5px;
 }
 
+/* Informacion */
+
+.show-info {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    border: solid 1px var(--subject-container-disabled-text);
+    border-radius: 5px;
+    background-color: transparent;
+    border: solid 2px rgb(39, 43, 51);
+    width: 35px;
+    height: 35px;
+    margin: 1px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    box-shadow: 0 0 2px 1px rgb(0, 117, 196);
+}
+
+.show-info:hover {
+    cursor: pointer;
+    background-color: var(--subject-container-disabled);
+}
+
+#info-content {
+    position: fixed;
+    left: -500px;
+    width: 500px;
+    height: 100%;
+    background-color: var(--background-color);
+    z-index: 1;
+    border-right: solid 1px var(--subject-container-disabled-text);
+    overflow-x: hidden;
+    overflow-y: scroll;
+    transition: left 0.6s ease;
+}
+
+#info-content.active {
+  left: 0;
+}
+
 /* Header */
 
 header {
@@ -237,41 +279,36 @@ header {
 }
 
 .volver-btn {
-    position: absolute;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;  
     background-color: rgba(128, 128, 128, 0.5);
     background-size: cover;
-    border: solid 1px rgb(126, 126, 126);
+    border: solid 2px rgb(39, 43, 51);
     width: 35px;
     height: 35px;
-    left: 5px;
-    top: 5px;
     padding: 0;
     cursor: pointer;
     transition: transform 0.2s ease;
-    box-shadow: 0 0 2px 1px rgb(129, 129, 129);
+    box-shadow: 0 0 2px 1px rgb(0, 117, 196);
+    border-radius: 5px;
     color: var(--text-color);
-    font-size: 20px;
-    line-height: 1;
     vertical-align: middle;
 }
 
 .toggle-btn {
-    position: absolute;
+    position: relative;
     background-color: transparent;
     background-image: var(--toggle-btn-img);
     background-size: cover;
-    border: solid 1px rgb(126, 126, 126);
+    border: solid 2px rgb(39, 43, 51);
     width: 35px;
     height: 35px;
-    left: 5px;
-    top: 45px;
     cursor: pointer;
     transition: transform 0.2s ease;
-    box-shadow: 0 0 2px 1px rgb(129, 129, 129);
-    z-index: 2;
+    box-shadow: 0 0 2px 1px rgb(0, 117, 196);
+    border-radius: 5px;
 }
 
 .toggle-btn:hover, .volver-btn:hover {
@@ -328,6 +365,7 @@ main {
     overflow-x: scroll;
     flex-grow: 1;
     height: 100vh;
+    background-color: var(--background-color);
 
     /* Deshabilitar marcado de texto */
     user-select: none;
@@ -724,7 +762,12 @@ progress::-webkit-progress-value {
 */
 
 @media (max-width: 1000px) {
-    /* Header */
+    /* Información */
+
+    #info-content {
+        left: -100%;
+        width: 100%;
+    }
 
     /* Efecto de Primavera */
 
@@ -749,15 +792,18 @@ progress::-webkit-progress-value {
     }
 
     .toggle-btn {
-        width: 25px;
-        height: 25px;
-        left: 5px;
+        width: 30px;
+        height: 30px;
     }
     
     .volver-btn {
-        width: 25px;
-        height: 25px;
-        left: 5px;
+        width: 30px;
+        height: 30px;
+    }
+
+    .show-info {
+        width: 30px;
+        height: 30px;
     }
 
     h1 {
@@ -979,19 +1025,23 @@ progress::-webkit-progress-value {
     }
 }
 
+
+/*
+    ╔═════════════════════════════════════════════════════════════════════╗
+    ║ ███████████████████████████████████████████████████████████████████ ║
+    ║ ████████████████████████ MEDIA QUERY MOBILE ███████████████████████ ║
+    ║ ███████████████████████████████ 460 ███████████████████████████████ ║
+    ║ ███████████████████████████████████████████████████████████████████ ║
+    ╚═════════════════════════════════════════════════════════════════════╝
+*/
+
+
 @media (max-width: 460px) {
     .unne_logo {
         background-size: 50px;
         width: 50px;
         height: 50px;
         margin-top: 35px;
-    }
-
-    .toggle-btn {
-        width: 20px;
-        height: 20px;
-        left: 5px;
-        top: 40px;
     }
 }
 
