--- a/css/styles.css
+++ b/css/styles.css
@@ -960,7 +960,8 @@ progress::-webkit-progress-value {
         margin-top: 5px;
         padding: 5px 2px 5px 2px;
         font-size: 10px;
-        width: 140px;
+        width: 160px;
+        left: -12px;
         min-width: 140px;
         border-radius: 5px;
         z-index: 2;
@@ -987,7 +988,9 @@ progress::-webkit-progress-value {
     button {
         font-family: 'Dosis', 'sans-serif';
         font-weight: 600;
-        font-size: 8px;
+        font-size: 9px;
+        width: 50px;
+        height: 25px;
         border-radius: 5px;
         border-width: 1px;
     }
@@ -1037,7 +1040,7 @@ progress::-webkit-progress-value {
         position: absolute;
         top: -10px;
         left: -10px;
-        width: 140px;
+        width: 160px;
         height: 50px;
     }
 
